cli/aws_orbit/data/kubectl/orbit-system/01-admission-controller.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: admission-controller-pod
  namespace: orbit-system
spec:
  selector:
    app: admission-controller-pod
  ports:
  - name: https
    protocol: TCP
    port: 443
    targetPort: 443
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: admission-controller
  namespace: orbit-system
  name: admission-controller-pod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admission-controller-pod
  template:
    metadata:
      labels:
        app: admission-controller-pod
      name: admission-controller-pod
    spec:
      serviceAccountName: orbit-${env_name}-admin
      containers:
        - name: webhook
          image: ${admission_controller_image}
          imagePullPolicy: ${image_pull_policy}
          ports:
            - containerPort: 443
              name: https
              protocol: TCP
          args:
            - "--bind=0.0.0.0:443"
            - "--certfile=/certs/tls.crt"
            - "--keyfile=/certs/tls.key"
            - "--workers=$(GUNICORN_WORKERS)"
            - "--reload"
            - "aws_orbit_admission_controller.app:app"
          volumeMounts:
            - readOnly: true
              mountPath: /certs
              name: admission-controller-certs
          readinessProbe:
            httpGet:
              path: /health
              scheme: HTTPS
              port: 443
            initialDelaySeconds: 3
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              scheme: HTTPS
              port: 443
            initialDelaySeconds: 3
            periodSeconds: 5
          resources:
            limits:
              cpu: 2
              memory: 2G
            requests:
              cpu: 1
              memory: 1G
      volumes:
        - name: admission-controller-certs
          secret:
            secretName: admission-controller-pod-certs
---
kind: MutatingWebhookConfiguration
apiVersion: admissionregistration.k8s.io/v1beta1
metadata:
  name: orbit-admission-controller-pod
webhooks:
  - name: admission-controller-pod.orbit-system.svc
    sideEffects: None
    reinvocationPolicy: IfNeeded
    failurePolicy: Fail
    matchPolicy: Equivalent
    namespaceSelector:
      matchExpressions:
        - key: orbit/space
          operator: In
          values:
            - team
            - user
    rules:
      - operations: ["CREATE", "UPDATE"]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
    clientConfig:
      caBundle: ""
      service:
        namespace: orbit-system
        name: admission-controller-pod
        path: /pod
