cli/aws_orbit/data/kubectl/orbit-system/01a-orbit-controller.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: podsettings-pod-modifier
  namespace: orbit-system
spec:
  selector:
    app: podsettings-pod-modifier
  ports:
  - name: https
    protocol: TCP
    port: 443
    targetPort: 443
---
kind: MutatingWebhookConfiguration
apiVersion: admissionregistration.k8s.io/v1beta1
metadata:
  name: orbit-podsettings-pod-modifier
webhooks:
  - name: podsettings-pod-modifier.orbit-system.svc
    sideEffects: None
    reinvocationPolicy: IfNeeded
    failurePolicy: Fail
    matchPolicy: Equivalent
    namespaceSelector:
      matchExpressions:
        - key: orbit/space
          operator: In
          values:
            - team
            - user
    rules:
      - operations: ["CREATE", "UPDATE"]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
    clientConfig:
      caBundle: ""
      service:
        namespace: orbit-system
        name: podsettings-pod-modifier
        path: /pod-podsetting
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: orbit-controller
  namespace: orbit-system
  name: podsettings-pod-modifier
spec:
  podManagementPolicy: OrderedReady
  replicas: 1
  revisionHistoryLimit: 10
  serviceName: podsettings-pod-modifier
  selector:
    matchLabels:
      app: podsettings-pod-modifier
  template:
    metadata:
      labels:
        app: podsettings-pod-modifier
      name: podsettings-pod-modifier
      annotations:
        sidecar.istio.io/inject: "false"
    spec:
      serviceAccountName: orbit-${env_name}-admin
      containers:
        - name: webhook
          image: ${orbit_controller_image}
          imagePullPolicy: ${image_pull_policy}
          ports:
            - containerPort: 443
              name: https
              protocol: TCP
          command:
            - gunicorn
          args:
            - "--bind=0.0.0.0:443"
            - "--certfile=/certs/tls.crt"
            - "--keyfile=/certs/tls.key"
            - "--workers=$(GUNICORN_WORKERS)"
            - "--reload"
            - "orbit_controller.server:app"
          volumeMounts:
            - readOnly: true
              mountPath: /certs
              name: orbit-controller-certs
            - mountPath: /state
              name: orbit-controller-state
              readOnly: false
          readinessProbe:
            httpGet:
              path: /health
              scheme: HTTPS
              port: 443
            initialDelaySeconds: 3
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              scheme: HTTPS
              port: 443
            initialDelaySeconds: 3
            periodSeconds: 5
          resources:
            limits:
              cpu: 2
              memory: 2G
            requests:
              cpu: 100m
              memory: 100M
      volumes:
        - name: orbit-controller-certs
          secret:
            secretName: podsettings-pod-modifier-certs
        - name: orbit-controller-state
          configMap:
            name: orbit-controller-state
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: orbit-controller
  namespace: orbit-system
  name: userspace-chart-manager
spec:
  podManagementPolicy: OrderedReady
  replicas: 1
  revisionHistoryLimit: 10
  serviceName: ""
  selector:
    matchLabels:
      app: userspace-chart-manager
  template:
    metadata:
      labels:
        app: userspace-chart-manager
      name: userspace-chart-manager
      annotations:
        sidecar.istio.io/inject: "false"
    spec:
      serviceAccountName: orbit-${env_name}-admin
      containers:
        - name: watcher
          image: ${orbit_controller_image}
          imagePullPolicy: ${image_pull_policy}
          command:
            - orbit-controller
            - watch
            - namespaces
          args:
            - "--workers=$(USERSPACE_CHART_MANAGER_WORKERS)"
          volumeMounts:
            - mountPath: /state
              name: orbit-controller-state
              readOnly: false
          resources:
            limits:
              cpu: 2
              memory: 2G
            requests:
              cpu: 100m
              memory: 100M
      volumes:
        - name: orbit-controller-state
          configMap:
            name: orbit-controller-state
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: orbit-controller
  namespace: orbit-system
  name: podsettings-poddefaults-manager
spec:
  podManagementPolicy: OrderedReady
  replicas: 1
  revisionHistoryLimit: 10
  serviceName: ""
  selector:
    matchLabels:
      app: podsettings-poddefaults-manager
  template:
    metadata:
      labels:
        app: podsettings-poddefaults-manager
      name: podsettings-poddefaults-manager
      annotations:
        sidecar.istio.io/inject: "false"
    spec:
      serviceAccountName: orbit-${env_name}-admin
      containers:
        - name: podsettings-watcher
          image: ${orbit_controller_image}
          imagePullPolicy: ${image_pull_policy}
          command:
            - orbit-controller
            - watch
            - podsettings
          args:
            - "--workers=$(POD_SETTINGS_WATCHER_WORKERS)"
          volumeMounts:
            - mountPath: /state
              name: orbit-controller-state
              readOnly: false
          resources:
            limits:
              cpu: 2
              memory: 2G
            requests:
              cpu: 100m
              memory: 100M
      #   - name: poddefaults-watcher
      #     image: ${orbit_controller_image}
      #     imagePullPolicy: ${image_pull_policy}
      #     envFrom:
      #       - configMapRef:
      #           name: orbit-controller-config
      #     command:
      #       - orbit-controller
      #       - watch
      #       - poddefaults
      #     args:
      #       - "--workers=$(POD_DEFAULTS_WATCHER_WORKERS)"
      #     volumeMounts:
      #       - mountPath: /state
      #         name: orbit-controller-state
      #         readOnly: false
      #     resources:
      #       limits:
      #         cpu: 2
      #         memory: 2G
      #       requests:
      #         cpu: 100m
      #         memory: 100M
      volumes:
        - name: orbit-controller-state
          configMap:
            name: orbit-controller-state
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: landing-page
  namespace: orbit-system
  name: landing-page-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: landing-page-service
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "false"
      labels:
        app: landing-page-service
      name: landing-page-service
    spec:
      serviceAccountName: orbit-${env_name}-admin
      containers:
        - name: webhook
          image: ${orbit_controller_image}
          imagePullPolicy: ${image_pull_policy}
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
          command:
            - gunicorn
          args:
            - "--bind=0.0.0.0:80"
            - "--workers=$(GUNICORN_WORKERS)"
            - "--reload"
            - "orbit_controller.server:app"
          readinessProbe:
            httpGet:
              path: /health
              scheme: HTTP
              port: 80
            initialDelaySeconds: 3
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              scheme: HTTP
              port: 80
            initialDelaySeconds: 3
            periodSeconds: 5
          resources:
            limits:
              cpu: 2
              memory: 2G
            requests:
              cpu: 100m
              memory: 100M
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: landing-page
  name: landing-page-service
  namespace: orbit-system
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
      name: ui
  selector:
    app: landing-page-service
  type: ClusterIP
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: orbit-landing-page
  namespace: kubeflow
  labels:
    app.kubernetes.io/component: orbit
    app.kubernetes.io/name: orbit-landing-page
spec:
  hosts:
  - "*"
  gateways:
  - kubeflow-gateway
  http:
  - match:
    - uri:
        prefix: /orbit/
    rewrite:
      uri: /
    route:
    - destination:
        host: landing-page-service.orbit-system.svc.cluster.local
        port:
          number: 80
