cli/aws_orbit/data/kubectl/orbit-system/01b-image-replicator.yaml
kind: Service
apiVersion: v1
metadata:
  name: image-replication-operator
  namespace: orbit-system
spec:
  selector:
    app: image-replication-operator
  ports:
  - name: https
    protocol: TCP
    port: 443
    targetPort: 443
---
kind: MutatingWebhookConfiguration
apiVersion: admissionregistration.k8s.io/v1beta1
metadata:
  name: orbit-image-replication-operator
  annotations:
    cert-manager.io/inject-ca-from: orbit-system/image-replication-operator-cert
webhooks:
  - name: image-replication-operator.orbit-system.svc
    sideEffects: NoneOnDryRun
    reinvocationPolicy: IfNeeded
    failurePolicy: Fail
    matchPolicy: Equivalent
    namespaceSelector:
      matchExpressions:
        - key: orbit/space
          operator: NotIn
          values:
            - env
    rules:
      - operations: ["CREATE", "UPDATE"]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
    clientConfig:
      caBundle: ""
      service:
        namespace: orbit-system
        name: image-replication-operator
        path: /update-pod-images
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: orbit-controller
  namespace: orbit-system
  name: image-replication-operator
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: image-replication-operator
  template:
    metadata:
      labels:
        app: image-replication-operator
      name: image-replication-operator
      annotations:
        sidecar.istio.io/inject: "false"
    spec:
      serviceAccountName: orbit-${env_name}-admin
      containers:
        - name: operator
          image: ${orbit_controller_image}
          imagePullPolicy: ${image_pull_policy}
          ports:
            - containerPort: 443
              name: https
              protocol: TCP
          command:
            - kopf
            - run
          args:
            - "--liveness=http://0.0.0.0:8080/healthz"
            - "--log-format=json"
            - "--module=orbit_controller.image_replication_operator"
            - "--verbose"
          volumeMounts:
            - readOnly: true
              mountPath: /certs
              name: image-replication-operator-certs
          readinessProbe:
            httpGet:
              path: /healthz
              scheme: HTTP
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 5
            successThreshold: 1
          livenessProbe:
            httpGet:
              path: /healthz
              scheme: HTTP
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 600
          resources:
            limits:
              cpu: 2
              memory: 2G
            requests:
              cpu: 100m
              memory: 100M
      volumes:
        - name: image-replication-operator-certs
          secret:
            secretName: image-replication-operator-webhook-tls
